Add front camera and change tattoo rotation according to the sensors

--- a/app/src/main/Assets/Samples/ARCamera/index.html
+++ b/app/src/main/Assets/Samples/ARCamera/index.html
@@ -32,6 +32,7 @@
 
         <div id="tracking-model-reset-button-container">
             <input id="tracking-model-reset-button" type="image" src="assets/buttons/trash.png" onclick="World.resetModels()">
+            <input id="tracking-model-button-change-camera"  type="image" src="assets/buttons/trainer.png" onclick="World.changeCameraPosition()" />
         </div>
         
         <div id="tracking-controls-container-lower">
